[metadata]
name = kafkaopmon
version = attr: kafkaopmon.__version__
url = https://github.com/DUNE-DAQ/kafkaopmon
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir = =python
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = python
